src/components/ui/game/game.module.css
.container {
  position: relative;
  display: flex;
  justify-content: space-between;
  aspect-ratio: 510 / 475;
  padding: 35px 30px;
  background: rgb(255 255 255 / 7.5%);
  border: 1px solid var(--color-base-1);
  border-radius: var(--border-radius);
  box-shadow: inset 0 1px 0 rgb(255 255 255 / 30%);

  & .polygon {
    position: absolute;
    top: calc(50% + 15px);
    left: calc(50% + 86px);
    pointer-events: none;
    translate: -50% -50%;
  }

  & .main {
    position: relative;
    width: 238px;
    background: rgb(var(--color-base-2-rgb) / 84%);
    border-radius: var(--border-radius);
    box-shadow: inset 1px 5px 11px rgb(var(--color-base-1-rgb) / 71%);

    & button {
      position: absolute;
      bottom: 55px;
      left: 50%;
      transform: translateX(-50%);
    }
  }

  & .sub {
    position: relative;
    width: 181px;

    & .help {
      padding: 13px;
      background: rgb(var(--color-base-2-rgb) / 19%);
      border-radius: var(--border-radius);

      & .keys {
        display: grid;
        grid-template-columns: repeat(3, 1fr);
        gap: 5px;
        margin-top: 13px;
      }
    }

    /* stylelint-disable-next-line block-no-empty */
    & .score {
    }

    & p {
      font-size: var(--font-size-code);
    }
  }
}

